--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <!-- Fim da div container !-->
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/jquery-collision.min.js"></script>
   </body>
 </html>
