--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       </div>
       <!-- Fim da div fundoGame !-->
     </div>
+
+    <!-- Sons do jogo !-->
+    <audio src="sound/som.mp3" preload="auto" id="somDisparo"></audio>
+    <audio src="sound/explosao.mp3" preload="auto" id="somExplosao"></audio>
+    <audio src="sound/musica_fundo.mp3" preload="auto" id="musica"></audio>
+    <audio src="sound/gameover.mp3" preload="auto" id="somGameover"></audio>
+    <audio src="sound/perdido.mp3" preload="auto" id="somPerdido"></audio>
+    <audio src="sound/resgate.mp3" preload="auto" id="somResgate"></audio>
+
     <!-- Fim da div container !-->
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
